--- a/Intro_CSS.html
+++ b/Intro_CSS.html
@@ -3,9 +3,9 @@
     <head>
     <title>My Personal Introduction</title>
       <stlye>
-        body{background-color: #a2c1aa}
-        h1{color: #5f4851} 
-        p{color: #403a4c}
+        body{background-color: #a2c1aa;}
+        h1{color: #5f4851;} 
+        p{color: #403a4c;}
       </style>
       </head>
       <body>  
