--- a/Intro_CSS.html
+++ b/Intro_CSS.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
   <html>
     <head>
-    <title>My Personal Introduction</title>
+      <title>My Personal Introduction</title>
       <stlye>
-        body{background-color: #a2c1aa;}
-        h1{color: #5f4851;} 
-        p{color: #403a4c;}
+        body {background-color: #a2c1aa}
+        h1 {color: #5f4851} 
+        p {color: #403a4c}
       </style>
-      </head>
+    </head>
       <body>  
         <h1> My name is Jose Melo </h1>
         <p>
