--- a/Intro_CSS.html
+++ b/Intro_CSS.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <title>My Personal Introduction</title>
-      <stlye>
+      <style>
         body {
               background-color:#a2c1aa
         }
