--- a/CarComparison.html
+++ b/CarComparison.html
@@ -2,11 +2,14 @@
   <html>
     <head>
       <h1>
-        Car Comparison Between Mazda CX-30 and Lexus Ux 300h
+        Car Comparison Between Mazda CX-30 & Lexus Ux 300h
       </h1>
+      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.lexus.com%2Fmodels%2FUX-hybrid&psig=AOvVaw0D-z41V1TYuAc4VjfjM_1-&ust=1729009771795000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJjTz7yljokDFQAAAAAdAAAAABAE">
      </head>
     <body>
-      <p>
+      <h3>
+        
+      </h3>
         
       </body>
   </html>
