--- a/CarComparison.html
+++ b/CarComparison.html
@@ -4,7 +4,7 @@
       <h1>
         Car Comparison Between Mazda CX-30 & Lexus Ux 300h
       </h1>
-      <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.lexus.com%2Fmodels%2FUX-hybrid&psig=AOvVaw0D-z41V1TYuAc4VjfjM_1-&ust=1729009771795000&source=images&cd=vfe&opi=89978449&ved=0CBQQjRxqFwoTCJjTz7yljokDFQAAAAAdAAAAABAE">
+      <img src="https://www.lexus.com/content/dam/lexus/images/models/ux/2025/hero/Lexus-UX-hybrid-hero-mobile-960x1109-LEX-UXH-MY24-0017.jpg">
      </head>
     <body>
       <h3>
