--- a/CarComparison.html
+++ b/CarComparison.html
@@ -4,7 +4,8 @@
       <h1>
         Car Comparison Between Mazda CX-30 & Lexus Ux 300h
       </h1>
-      <img src="https://www.lexus.com/content/dam/lexus/images/models/ux/2025/hero/Lexus-UX-hybrid-hero-mobile-960x1109-LEX-UXH-MY24-0017.jpg">
+      <img src="https://www.lexus.com/content/dam/lexus/images/models/ux/2025/hero/Lexus-UX-hybrid-hero-mobile-960x1109-LEX-UXH-MY24-0017.jpg"
+        height= "10" width="10">
      </head>
     <body>
       <h3>
