--- a/CarComparison.html
+++ b/CarComparison.html
@@ -4,7 +4,7 @@
       <h1>
         Car Comparison Between Mazda CX-30 & Lexus Ux 300h
       </h1>
-      <img src="https://www.lexus.com/content/dam/lexus/images/models/ux/2025/hero/Lexus-UX-hybrid-hero-mobile-960x1109-LEX-UXH-MY24-0017.jpg"
+      <img src="https://media.ed.edmunds-media.com/lexus/ux-250h/2023/oem/2023_lexus_ux-250h_4dr-suv_f-sport-handling_fq_oem_1_600.jpg"
         height= "268" width="403" alt="2025 Lexus UX">
       <img src="https://media.ed.edmunds-media.com/mazda/cx-30/2025/oem/2025_mazda_cx-30_4dr-suv_25-s-carbon-edition_fq_oem_1_600.jpg" height="
         268" width="403" alt="2025 Mazda CX-30">
