--- a/CarComparison.html
+++ b/CarComparison.html
@@ -2,7 +2,7 @@
   <html>
     <head>
       <h1>
-        Car Comparison Between Mazda CX-30 & Lexus Ux 300h
+        Car Comparison Between 2025 Lexus UX 300h & 2025 Mazda CX-30
       </h1>
       <img src="https://media.ed.edmunds-media.com/lexus/ux-250h/2023/oem/2023_lexus_ux-250h_4dr-suv_f-sport-handling_fq_oem_1_600.jpg"
         height= "268" width="403" alt="2025 Lexus UX">
