--- a/CarComparison.html
+++ b/CarComparison.html
@@ -4,10 +4,16 @@
       <h1>
         Car Comparison Between 2025 Lexus UX 300h & 2025 Mazda CX-30
       </h1>
-      <img src="https://media.ed.edmunds-media.com/lexus/ux-250h/2023/oem/2023_lexus_ux-250h_4dr-suv_f-sport-handling_fq_oem_1_600.jpg"
-        height= "268" width="403" alt="2025 Lexus UX">
-      <img src="https://media.ed.edmunds-media.com/mazda/cx-30/2025/oem/2025_mazda_cx-30_4dr-suv_25-s-carbon-edition_fq_oem_1_600.jpg" height="
-        268" width="403" alt="2025 Mazda CX-30">
+      <figure>
+        <img src="https://media.ed.edmunds-media.com/lexus/ux-250h/2023/oem/2023_lexus_ux-250h_4dr-suv_f-sport-handling_fq_oem_1_600.jpg"
+        height= "268" width="403">
+        <figcaption>2025 Lexus UX 300h</figcaption>
+      </figure>
+      <figure>
+        <img src="https://media.ed.edmunds-media.com/mazda/cx-30/2025/oem/2025_mazda_cx-30_4dr-suv_25-s-carbon-edition_fq_oem_1_600.jpg" height="
+        268" width="403">
+        <figcaption>2025 Mazda CX-30</figcaption>
+      </figure>
      </head>
     <body>
       <h3>
