--- a/Melo_LabPythonGame.html
+++ b/Melo_LabPythonGame.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <py-config>
-      packages = {'numpy'}
+      packages = ['numpy']
     <py-script>
       import numpy as np
       selection = np.random.randint(0,100,1)[0]
