--- a/Melo_LabPythonGame.html
+++ b/Melo_LabPythonGame.html
@@ -12,6 +12,7 @@
   <body>
     <py-config>
       packages = [ 'numpy' ]
+    </py-config>
     <py-script>
       import numpy as np
       selection = np.random.randint(0,100,1)[0]
