--- a/Melo_LabPythonGame.html
+++ b/Melo_LabPythonGame.html
@@ -34,5 +34,5 @@
       elif user_guess > selection: 
         result.write("Try again! Your guess was too high.")
       else:
-        result.write("Try again! Your guess was too high.")
+        result.write("Try again! Your guess was too low.")
   </py-script>
