--- a/PracticingHTML.html
+++ b/PracticingHTML.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
 <html>
-    
+    <head>
+        Trying out HTML once again, hopefully I can make my own website to represent me.
+    </head>
 </html>
